Revision 4.2.6rc2
-----------------

- Critical error fixed in key localization procedure for AES192/AES256/3DES
  cyphers. Previous versions might never worked properly in this respect.
- Major rewrite of native SNMPv3 CommandGenerator and NotificationOriginator
  applications towards the following goals:
  * avoid bonding with particular SNMP engine instance to promote single
    app instance using many SNMP engine instances
  * support two APIs for working with request data: one operates on the
    whole PDU object while the other on PDU contents
  * keep callback context data in stack rather than in stateful application
    cache
  * newly introduced sendVarBinds() method offers a more functional and
    logical signatures.
  * keep backward compatibility for all existing major/documented interfaces
- Execution Observer facility implemented to give app an inside view
  of SNMP engine inner workings. This is thought to be a generic
  framework for viewing (and modifying) various internal states
  of pysnmp engine. Previously introduced non-standard APIs (like
  getting peer's transport endpoint which is not suggested in RFCs)
  will be gradually migrated to this new framework.
- Initial support for the asyncio & Trollius frameworks and
  coroutines-based SNMP Applications interfaces added. Both IPv4 and IPv6
  datagram transports are currently supported.
- The asyncore-based transport subsystem extended to support POSIX
  sendmsg()/recvmsg() based socket communication what could be used,
  among other things, in the context of a transparent SNMP proxy 
  application. Technically, the following features were brought
  into pysnmp with this update:
  * Sending SNMP packets from a non-local IP address
  * Receiving IP packets for non-local IP addresses
  * Responding to SNMP requests from exactly the same IP address
    the query was sent to. This proves to be useful when listening
    on both primary and secondary IP interfaces.